# serializer version: 1
# name: test_SwiftSRGAN_2x
  ImageModelDescriptor(
    architecture=SwiftSRGANArch(
      id='SwiftSRGAN',
      name='Swift-SRGAN',
    ),
    input_channels=3,
    bytes=735460,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '16nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_SwiftSRGAN_4x
  ImageModelDescriptor(
    architecture=SwiftSRGANArch(
      id='SwiftSRGAN',
      name='Swift-SRGAN',
    ),
    input_channels=3,
    bytes=804836,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '16nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
